Add optimisation in cmake.

--- a/Assignment2/代码框架/CMakeLists.txt
+++ b/Assignment2/代码框架/CMakeLists.txt
@@ -5,6 +5,8 @@ find_package(OpenCV REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_CXX_FLAGS "-O3")
+
 include_directories(/usr/local/include)
 
 add_executable(Rasterizer main.cpp rasterizer.hpp rasterizer.cpp global.hpp Triangle.hpp Triangle.cpp)
