Improve Path Tracing.
1. random sample point for anti-aliasing
2. pdf_hemi too small will cause white spots
3. multi-thread acceleration (two versions)

--- a/Assignment7/CMakeLists.txt
+++ b/Assignment7/CMakeLists.txt
@@ -3,6 +3,14 @@ project(RayTracing)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_CXX_FLAGS "-O3")
+
+# find_package(Threads REQUIRED)
+find_package(OpenMP REQUIRED)
+
 add_executable(RayTracing main.cpp Object.hpp Vector.cpp Vector.hpp Sphere.hpp global.hpp Triangle.hpp Scene.cpp
         Scene.hpp Light.hpp AreaLight.hpp BVH.cpp BVH.hpp Bounds3.hpp Ray.hpp Material.hpp Intersection.hpp
         Renderer.cpp Renderer.hpp)
+
+# target_link_libraries(RayTracing Threads::Threads)
+target_link_libraries(RayTracing OpenMP::OpenMP_CXX)
